Commits Homework 4 code

--- a/views/elements.ejs
+++ b/views/elements.ejs
@@ -26,10 +26,4 @@
                         to any threats involving sensitive data or assets.</li>
                     </ul>
                 </div>
-            </main>
-            <footer>
-               Learn more at <a href="https://searchsecurity.techtarget.com/definition/cybersecurity" target="_blank">TechTarget</a>
-            </footer>
-        </div>
-    </body>
-</html>
+<% include partials/footer.ejs %>
