--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,10 +20,4 @@
                     customer data should have cybersecurity as a main priority 
                     to protect from potential breaches.</p>
                 </div>
-            </main>
-            <footer>
-               Learn more at <a href="https://searchsecurity.techtarget.com/definition/cybersecurity" target="_blank">TechTarget</a>
-            </footer>
-        </div>
-    </body>
-</html>
+<% include partials/footer.ejs %>
