--- a/views/purpose.ejs
+++ b/views/purpose.ejs
@@ -22,10 +22,4 @@
                     technology used by attackers, which makes it an ongoing fight
                     to continue and improve security measures.</p>
                 </div>
-            </main>
-            <footer>
-               Learn more at <a href="https://searchsecurity.techtarget.com/definition/cybersecurity" target="_blank">TechTarget</a>
-            </footer>
-        </div>
-    </body>
-</html>
+<% include partials/footer.ejs %>
