--- a/views/threats.ejs
+++ b/views/threats.ejs
@@ -23,10 +23,4 @@
                         with the attentiuon to steal important data.</li>
                     </ul>
                 </div>
-            </main>
-            <footer>
-               Learn more at <a href="https://searchsecurity.techtarget.com/definition/cybersecurity" target="_blank">TechTarget</a>
-            </footer>
-        </div>
-    </body>
-</html>
+<% include partials/footer.ejs %>
